# Personnal_work

./: README.md
MayaCalculatePlugin/: .gitignore  CMakeLists.txt  helloWorld.cpp
MayaCalculatePlugin/modules/: FindMaya.cmake
maya_breakdown/: hline.py  mbcore.py  mbui.py
shower_messenger/: main.py
shower_messenger/core/: userClass.py
shower_messenger/ui/: customLineEdit.py  customMenuBar.py  mainWindow.py
